[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-sdk-verigent"
version = "0.2.0"
description = "Verigent trust verification for the Claude Agent SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "verigentai" }]
keywords = ["claude", "anthropic", "agent", "trust", "verification", "verigent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "anthropic>=0.30.0",
]

[project.urls]
Homepage = "https://verigent.ai"
Repository = "https://github.com/verigentai/claude-sdk-verigent"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sdk_verigent"]
